# Data-structures

./: CMAKE.md  CMakeLists.txt  README.md
Linked lists/: lista.c  lista.h
Linked lists/Exercicios/: q1.c
Stacks and Queues/: .stack.h.swn  .stack.h.swo  .stack.h.swp  .static_stack.h.swp  q  queue.h  stack.h  static_queue.c  static_stack.c
linked_lists/: CMakeLists.txt
stacks_queues/: queue.h  stack.h  static_stack.c
stacks_queues/queues/: CMakeLists.txt
stacks_queues/queues/src/: dynamic_queue.c  linked_queue.c  static_queue.c
stacks_queues/stacks/: CMakeLists.txt
stacks_queues/stacks/exercises/: q1.c  q2.c  q3.c
stacks_queues/stacks/src/: dynamic_stack.c  linked_stack.c
trees/: Heap_BST.c  tree.h
